# relevance-inference

./: .env  README.md  handler.py  import.py  pyproject.toml  requirements.txt  types_.py
.github/workflows/: sync-to-hf.yml
src/: format.py
src/dtos/input/: basic.py
src/dtos/output/: basic.py
src/extract/: README.md  core.py
src/models/_shared/object/: output.py
src/models/bag_of_words/: formatter.py  model.py  predictor.py
src/predict/: core.py
tests/: test_call.py
tests/data/: test.html
