[project]
name = "inference-prototype-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "huggingface-hub>=0.33.2",
    "scikit-learn>=1.7.0",
    "spacy>=3.8.7",
    "spacy-huggingface-hub>=0.0.10",
]
